--- a/index.css
+++ b/index.css
@@ -83,15 +83,15 @@ html {
 }
 
 .btn1 {
-    background-color: orange;
+    background-color: blue;
     border-radius: 10px;
-    border: 2px solid white;
+    border: 1px solid white;
     box-shadow: 0 0 7px black;
 }
 
 .btn1 a {
     text-decoration: none;
-    color: black;
+    color:white;
 }
 
 .card {
@@ -101,7 +101,7 @@ html {
 .hm {
     text-align: center;
     color: red;
-    text-shadow: 0 0 3px blue;
+    text-shadow: 0 0 3px black;
 }
 
 .hh {
@@ -234,4 +234,13 @@ span {
 }
 .bi{
     color: red;
+}
+.knowmore{
+    text-decoration: none;
+    color: white;
+}
+.btn:hover{
+    border:2 px solid black;
+    background-color: white;
+    color: black;
 }
