--- a/index.css
+++ b/index.css
@@ -85,8 +85,8 @@ html {
 .btn1 {
     background-color: blue;
     border-radius: 10px;
-    border: 1px solid white;
-    box-shadow: 0 0 7px black;
+    /* border: 1px solid white; */
+    box-shadow: 0 0 6px darkblue;
 }
 
 .btn1 a {
@@ -243,4 +243,7 @@ span {
     border:2 px solid black;
     background-color: white;
     color: black;
+}
+.card-title h5{
+    color: darkblue;
 }
